# ilsore-format

./: Cargo.toml  LICENSE
.github/: renovate.json
.github/workflows/: build.yml  style.yml  wait-all-checks.yml
src/: args.rs  date_time.rs  error.rs  git_utils.rs  ilsore_format.rs  ilsore_format_color.rs  main.rs  python_status.rs  structs.rs  user_host.rs  util.rs
tests/: common.rs  execution.rs
