[package]
name = "ilsore-format"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
hostname = "0.3.1"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
enum-map = "2.7.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"

[profile.release]
strip = true
