[package]
name = "ilsore-format"
version = "1.0.0"
edition = "2021"
license-file = "LICENSE.txt"

[dependencies]
git2 = "0.19.0"
hostname = "0.4.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
enum-map = "2.7.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.19.0"

[profile.release]
strip = true
